samples/_failures_safe/1761392419_b76adb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ba549d3.c: In function ‘main’:
./samples/SAFE/__tmp_9ba549d3.c:153:17: error: expected expression at end of input
  153 |                 } else
      |                 ^
./samples/SAFE/__tmp_9ba549d3.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ba549d3.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ba549d3.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ba549d3.c:153:17: error: expected declaration or statement at end of input
